--- a/src/styles/_prListTable.scss
+++ b/src/styles/_prListTable.scss
@@ -1,8 +1,37 @@
+.no-data-container {
+    width: 400px;
+    height: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+    .no-data-text{
+        font-family: primary-font;
+        font-weight: 700;
+        font-size: 30px;
+        padding: 20px;
+        color: $primary-color;
+    }
+}
+
 .pr-list-table {
     border-collapse: collapse;
     width: 90%;
     text-align: center;
     margin: 20px;
+    margin-top: 60px;
+    font-family: $primary-font;
+    display: block;
+    overflow-y: scroll;
+    height: 500px;
+    table-layout: fixed;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+
+    // tbody {
+    //     display: block;
+    // }
 
     tr:nth-child(even){
         background-color: #f2f2f2;
@@ -23,7 +52,7 @@
         padding-top: 12px;
         padding-bottom: 12px;
         text-align: left;
-        background-color: rgb(20, 37, 83);
+        background-color: $primary-color;
         color: white;
     }
 }
