--- a/src/styles/_prListTable.scss
+++ b/src/styles/_prListTable.scss
@@ -20,18 +20,13 @@
     border-collapse: collapse;
     width: 90%;
     text-align: center;
-    margin: 20px;
+    margin: 20px auto;
     margin-top: 60px;
     font-family: $primary-font;
     display: block;
     overflow-y: scroll;
     height: 500px;
-    table-layout: fixed;
     box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
-
-    // tbody {
-    //     display: block;
-    // }
 
     tr:nth-child(even){
         background-color: #f2f2f2;
@@ -55,4 +50,34 @@
         background-color: $primary-color;
         color: white;
     }
+}
+
+.tableFixHead {
+    overflow-y: scroll;
+    height: 72vh;
+    width: 90%;
+    margin: 50px auto;
+    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
+    font-family: $primary-font;
+
+    thead {
+        
+        th {
+            margin: 0;
+            color: #FFF;
+            font-weight: 500;
+            font-size: 18px;
+            position: sticky;
+            top: -2px;
+            background-color: $primary-color;
+        }
+    }
+}
+
+.ticks {
+    color: green;
+}
+
+.cross {
+    color: red;
 }
