--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,7 +8,7 @@
 
 .navigation-container {
   height: 100vh;
-  width: 20%;
+  width: 15%;
   background: #25705A; }
   .navigation-container .navigation-container-header {
     font-family: 'Cinzel', serif;
@@ -19,7 +19,7 @@
 
 .main-container {
   height: 100vh;
-  width: 80%;
+  width: 85%;
   background-color: #e8f0f0; }
 
 .filter-sec {
@@ -61,13 +61,12 @@
   border-collapse: collapse;
   width: 90%;
   text-align: center;
-  margin: 20px;
+  margin: 20px auto;
   margin-top: 60px;
   font-family: "Raleway", sans-serif;
   display: block;
   overflow-y: scroll;
   height: 500px;
-  table-layout: fixed;
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75); }
   .pr-list-table tr:nth-child(even) {
     background-color: #f2f2f2; }
@@ -84,5 +83,27 @@
     text-align: left;
     background-color: #25705A;
     color: white; }
+
+.tableFixHead {
+  overflow-y: scroll;
+  height: 72vh;
+  width: 90%;
+  margin: 50px auto;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  font-family: "Raleway", sans-serif; }
+  .tableFixHead thead th {
+    margin: 0;
+    color: #FFF;
+    font-weight: 500;
+    font-size: 18px;
+    position: sticky;
+    top: -2px;
+    background-color: #25705A; }
+
+.ticks {
+  color: green; }
+
+.cross {
+  color: red; }
 
 /*# sourceMappingURL=style.css.map */
